fix: github icon in nav overflow.

--- a/_scss/_components.nav.scss
+++ b/_scss/_components.nav.scss
@@ -188,7 +188,7 @@ $nav-height: 51px;
 
     img {
         position: relative;
-        top: -1px;
+        margin-top: -3px;
     }
 
     &:hover {
